# SUTRA

./: .gitignore  README.md  pyproject.toml  requirements.txt
agent_handoff/: CLAUDE_#1.txt  README.txt  __init__.py  __main__.py  agent.py  benchmark.py  cache.py  cli.py  handoff.py  parser.py  protocol.py  templates.py  tools.py  utils.py
tests/: test_agent.py  test_cache.py  test_parser.py  test_protocol.py  test_tools.py  test_utils.py
